Fixed several correctness and performance issues. ASSIGNED - bug 58: Inference of public/protected visibility of invoked virtual methods is inaccurate https://soft.vub.ac.be/bugzilla/show_bug.cgi?id=58